--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -13,7 +13,7 @@
         layout="@layout/navigation_bar"></include>
 
     <RadioGroup
-        android:id="@+id/rg"
+        android:id="@+id/rg1"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_gravity="center"
@@ -22,7 +22,7 @@
         android:orientation="horizontal">
 
         <RadioButton
-            android:id="@+id/button"
+            android:id="@+id/button3"
             android:layout_marginLeft="16dp"
             android:drawablePadding="6dp"
             android:layout_width="wrap_content"
@@ -37,7 +37,7 @@
             android:textSize="@dimen/text_size_five" />
 
         <RadioButton
-            android:id="@+id/button1"
+            android:id="@+id/button4"
             android:layout_marginLeft="110dp"
             android:drawablePadding="6dp"
             android:layout_width="wrap_content"
@@ -51,7 +51,7 @@
             android:textSize="@dimen/text_size_five" />
 
         <RadioButton
-            android:id="@+id/button2"
+            android:id="@+id/button5"
             android:layout_marginLeft="110dp"
             android:drawablePadding="6dp"
             android:layout_marginRight="16dp"
@@ -73,7 +73,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"/>
     <LinearLayout
-        android:id="@+id/content"
+        android:id="@+id/content1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
