--- a/app/src/main/res/layout/activity_publish_information.xml
+++ b/app/src/main/res/layout/activity_publish_information.xml
@@ -12,132 +12,142 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_heightPercent="0.1"></include>
-    <LinearLayout
-        android:layout_marginTop="25dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
-        android:background="@drawable/edittext"
-        android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="wrap_content">
-        <EditText
-            android:gravity="top"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp"
-            android:textSize="@dimen/text_size_five"
-            android:textColor="@color/grayEleven"
-            android:hint="请写下关于孩子的一些信息......."
-            android:background="@null"
-            android:layout_width="match_parent"
-            android:layout_height="150dp" />
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <LinearLayout
-                android:layout_marginLeft="10dp"
-                android:layout_width="match_parent"
-                android:orientation="horizontal"
-                android:layout_height="wrap_content">
-                <ImageView
-                    android:src="@drawable/location_kong"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:layout_marginLeft="5dp"
-                    android:text="园区东平街299号欧瑞大厦"
-                    android:textColor="@color/Treeblack"
-                    android:textSize="@dimen/text_size_five"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-            <LinearLayout
-                android:layout_alignParentRight="true"
-                android:orientation="horizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                <ImageView
-                    android:layout_marginRight="5dp"
-                    android:src="@drawable/clock"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:text="2016/09/27"
-                    android:textColor="@color/Treeblack"
-                    android:textSize="@dimen/text_size_five"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-        </RelativeLayout>
+   <com.example.administrator.whereareyounow.view.MyScrollView
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content">
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:orientation="vertical"
+           android:layout_height="wrap_content">
+           <LinearLayout
+               android:layout_marginTop="25dp"
+               android:layout_marginLeft="12dp"
+               android:layout_marginRight="12dp"
+               android:background="@drawable/edittext"
+               android:layout_width="match_parent"
+               android:orientation="vertical"
+               android:layout_height="wrap_content">
+               <EditText
+                   android:gravity="top"
+                   android:layout_marginTop="10dp"
+                   android:layout_marginLeft="10dp"
+                   android:textSize="@dimen/text_size_five"
+                   android:textColor="@color/grayEleven"
+                   android:hint="请写下关于孩子的一些信息......."
+                   android:background="@null"
+                   android:layout_width="match_parent"
+                   android:layout_height="150dp" />
+               <RelativeLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content">
+                   <LinearLayout
+                       android:layout_marginLeft="10dp"
+                       android:layout_width="match_parent"
+                       android:orientation="horizontal"
+                       android:layout_height="wrap_content">
+                       <ImageView
+                           android:src="@drawable/location_kong"
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content" />
+                       <TextView
+                           android:layout_marginLeft="5dp"
+                           android:text="园区东平街299号欧瑞大厦"
+                           android:textColor="@color/Treeblack"
+                           android:textSize="@dimen/text_size_five"
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content" />
+                   </LinearLayout>
+                   <LinearLayout
+                       android:layout_alignParentRight="true"
+                       android:orientation="horizontal"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content">
+                       <ImageView
+                           android:layout_marginRight="5dp"
+                           android:src="@drawable/clock"
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content" />
+                       <TextView
+                           android:text="2016/09/27"
+                           android:textColor="@color/Treeblack"
+                           android:textSize="@dimen/text_size_five"
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content" />
+                   </LinearLayout>
+               </RelativeLayout>
 
-    </LinearLayout>
+           </LinearLayout>
 
-    <LinearLayout
-        android:layout_marginTop="25dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/wang_yuan"
-            android:layout_height="115dp" />
-        <ImageView
-            android:layout_marginLeft="3dp"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/li_yi_feng"
-            android:layout_height="115dp" />
-        <ImageView
-            android:layout_marginLeft="3dp"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/yu_yang_qian_xi"
-            android:layout_height="115dp" />
-    </LinearLayout>
-   <LinearLayout
-        android:layout_marginTop="3dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/li_da_chui"
-            android:layout_height="115dp" />
-        <ImageView
-            android:layout_marginLeft="3dp"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/yi_bo_chen"
-            android:layout_height="115dp" />
-        <ImageView
-            android:layout_marginLeft="3dp"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/add_picture"
-            android:layout_height="115dp" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
-        android:layout_marginTop="15dp"
-        android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:src="@drawable/imporant"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:layout_marginLeft="5dp"
-            android:text="点击地址和时间均可更改"
-            android:textColor="@color/yellowOne"
-            android:textSize="@dimen/text_size_five"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+           <LinearLayout
+               android:layout_marginTop="25dp"
+               android:layout_marginLeft="12dp"
+               android:layout_marginRight="12dp"
+               android:orientation="horizontal"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content">
+               <ImageView
+                   android:layout_width="0dp"
+                   android:layout_weight="1"
+                   android:src="@drawable/wang_yuan"
+                   android:layout_height="115dp" />
+               <ImageView
+                   android:layout_marginLeft="3dp"
+                   android:layout_width="0dp"
+                   android:layout_weight="1"
+                   android:src="@drawable/li_yi_feng"
+                   android:layout_height="115dp" />
+               <ImageView
+                   android:layout_marginLeft="3dp"
+                   android:layout_width="0dp"
+                   android:layout_weight="1"
+                   android:src="@drawable/yu_yang_qian_xi"
+                   android:layout_height="115dp" />
+           </LinearLayout>
+           <LinearLayout
+               android:layout_marginTop="3dp"
+               android:layout_marginLeft="12dp"
+               android:layout_marginRight="12dp"
+               android:orientation="horizontal"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content">
+               <ImageView
+                   android:layout_width="0dp"
+                   android:layout_weight="1"
+                   android:src="@drawable/li_da_chui"
+                   android:layout_height="115dp" />
+               <ImageView
+                   android:layout_marginLeft="3dp"
+                   android:layout_width="0dp"
+                   android:layout_weight="1"
+                   android:src="@drawable/yi_bo_chen"
+                   android:layout_height="115dp" />
+               <ImageView
+                   android:layout_marginLeft="3dp"
+                   android:layout_width="0dp"
+                   android:layout_weight="1"
+                   android:src="@drawable/add_picture"
+                   android:layout_height="115dp" />
+           </LinearLayout>
+           <LinearLayout
+               android:layout_marginLeft="12dp"
+               android:layout_marginRight="12dp"
+               android:layout_marginTop="15dp"
+               android:layout_width="match_parent"
+               android:orientation="horizontal"
+               android:layout_height="wrap_content">
+               <ImageView
+                   android:src="@drawable/imporant"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content" />
+               <TextView
+                   android:layout_marginLeft="5dp"
+                   android:text="点击地址和时间均可更改"
+                   android:textColor="@color/yellowOne"
+                   android:textSize="@dimen/text_size_five"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content" />
+           </LinearLayout>
+       </LinearLayout>
+   </com.example.administrator.whereareyounow.view.MyScrollView>
+
 </com.example.administrator.whereareyounow.view.PercentLinearLayout>
