--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -16,6 +16,8 @@
         android:id="@+id/rg1"
         android:layout_width="match_parent"
         android:layout_height="30dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:layout_gravity="center"
         android:background="@color/grayFive"
         android:gravity="center"
@@ -23,7 +25,6 @@
 
         <RadioButton
             android:id="@+id/button3"
-            android:layout_marginLeft="16dp"
             android:drawablePadding="6dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -38,7 +39,7 @@
 
         <RadioButton
             android:id="@+id/button4"
-            android:layout_marginLeft="110dp"
+            android:layout_marginLeft="100dp"
             android:drawablePadding="6dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -52,9 +53,8 @@
 
         <RadioButton
             android:id="@+id/button5"
-            android:layout_marginLeft="110dp"
+            android:layout_marginLeft="100dp"
             android:drawablePadding="6dp"
-            android:layout_marginRight="16dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
