--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -88,6 +88,8 @@
         android:id="@+id/rg"
         android:layout_width="match_parent"
         android:layout_height="30dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:layout_gravity="center"
         android:background="@color/grayFive"
         android:gravity="center"
@@ -95,7 +97,6 @@
 
         <RadioButton
             android:id="@+id/button"
-            android:layout_marginLeft="16dp"
             android:drawablePadding="6dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -110,7 +111,7 @@
 
         <RadioButton
             android:id="@+id/button1"
-            android:layout_marginLeft="110dp"
+            android:layout_marginLeft="100dp"
             android:drawablePadding="6dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -124,9 +125,8 @@
 
         <RadioButton
             android:id="@+id/button2"
-            android:layout_marginLeft="110dp"
+            android:layout_marginLeft="100dp"
             android:drawablePadding="6dp"
-            android:layout_marginRight="16dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
