--- a/app/src/main/res/layout/navigation_bar.xml
+++ b/app/src/main/res/layout/navigation_bar.xml
@@ -48,22 +48,33 @@
                     android:id="@+id/title_center"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_centerInParent="true"
                     android:gravity="center"
                     android:textColor="@color/white"
                     android:textSize="@dimen/text_size_one"
-                    android:text="你在哪" />
+                    android:text="你在哪"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true" />
+                <ImageView
+                    android:id="@+id/iv_left"
+                    android:visibility="gone"
+                    android:src="@drawable/chat"
+                    android:layout_marginRight="20dp"
+                    android:layout_centerVertical="true"
+                    android:layout_toLeftOf="@+id/fl"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
                 <FrameLayout
+                    android:id="@+id/fl"
                     android:layout_centerVertical="true"
                     android:layout_alignParentRight="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                     <TextView
                         android:id="@+id/title_right"
+                        android:textColor="@color/black"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:paddingRight="15dp"
-                        android:src="@mipmap/release"/>
+                        android:paddingRight="15dp" />
                     <ImageView
                         android:visibility="gone"
                         android:id="@+id/title_right1"
