--- a/app/src/main/res/layout/activity_publish_information.xml
+++ b/app/src/main/res/layout/activity_publish_information.xml
@@ -64,6 +64,7 @@
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_marginRight="5dp"
+                           android:layout_gravity="center_vertical"
                            android:src="@drawable/clock"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
