--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -96,6 +96,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
+            android:id="@+id/forgetpwd"
             android:text="忘记密码?"
             android:layout_alignParentRight="true"
             android:layout_gravity="center_horizontal"
