--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -4,157 +4,190 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/grayFive"
+    android:fitsSystemWindows="true"
+    android:orientation="vertical"
     tools:context="com.example.administrator.whereareyounow.activity.SigninActivity">
+
     <include
         android:id="@+id/shouye"
         layout="@layout/navigation_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_heightPercent="0.1"></include>
-    <LinearLayout
-        android:layout_marginTop="35dp"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/edittext_white"
-        android:layout_width="300dp"
-        android:layout_height="44dp">
-        <ImageView
-            android:layout_marginLeft="10dp"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/user"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <EditText
-            android:layout_marginLeft="10dp"
-            android:layout_gravity="center_vertical"
-            android:background="@null"
-            android:hint="请输入常用手机号"
-            android:textColor="@color/grayEleven"
-            android:textSize="@dimen/text_size_three"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_marginTop="25dp"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/edittext_white"
-        android:layout_width="300dp"
-        android:layout_height="44dp">
-        <ImageView
-            android:layout_marginLeft="10dp"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <EditText
-            android:layout_marginLeft="10dp"
-            android:layout_gravity="center_vertical"
-            android:background="@null"
-            android:hint="密码6-16个字符组成（字母加数字）"
-            android:textColor="@color/grayEleven"
-            android:textSize="@dimen/text_size_three"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_marginTop="25dp"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/edittext_white"
-        android:layout_width="300dp"
-        android:layout_height="44dp">
-        <ImageView
-            android:layout_marginLeft="10dp"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <EditText
-            android:layout_marginLeft="10dp"
-            android:layout_gravity="center_vertical"
-            android:background="@null"
-            android:hint="密码6-16个字符组成（字母加数字）"
-            android:textColor="@color/grayEleven"
-            android:textSize="@dimen/text_size_three"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_marginTop="25dp"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/edittext_white"
-        android:layout_width="300dp"
-        android:layout_height="44dp">
-        <ImageView
-            android:layout_marginLeft="10dp"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <EditText
-            android:layout_marginLeft="10dp"
-            android:layout_gravity="center_vertical"
-            android:background="@null"
-            android:hint="请输入手机验证码"
-            android:textColor="@color/grayEleven"
-            android:textSize="@dimen/text_size_three"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content" />
-        <View
-            android:background="@color/grayEleven"
-            android:layout_width="1dp"
-            android:layout_height="20dp"/>
-        <TextView
-            android:text="发送验证码"
-            android:textColor="@color/yellowOne"
-            android:layout_marginLeft="5dp"
-            android:layout_gravity="center_vertical"
-            android:textSize="@dimen/text_size_three"
-            android:layout_width="90dp"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_marginTop="35dp"
-        android:orientation="vertical"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/edittext_yellow"
-        android:layout_width="300dp"
-        android:layout_height="40dp">
-        <TextView
-            android:text="立即注册"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center_vertical"
-            android:textSize="@dimen/text_size_three"
-            android:textColor="@color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_marginTop="15dp"
-        android:orientation="horizontal"
-        android:padding="10dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="300dp"
-        android:layout_height="40dp">
-        <TextView
-            android:text="点击立即注册表示你已阅读并同意"
 
-            android:gravity="center_vertical"
-            android:textSize="@dimen/text_size_five"
-            android:textColor="@color/grayEleven"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:text="《你在哪协议》"
+    <com.example.administrator.whereareyounow.view.MyScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-            android:gravity="center_vertical"
-            android:textSize="@dimen/text_size_five"
-            android:textColor="@color/yellowOne"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+        <com.example.administrator.whereareyounow.view.PercentLinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="300dp"
+                android:layout_height="44dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="35dp"
+                android:background="@drawable/edittext_white"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:src="@drawable/user" />
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:background="@null"
+                    android:hint="请输入常用手机号"
+                    android:textColor="@color/grayEleven"
+                    android:textSize="@dimen/text_size_three" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="300dp"
+                android:layout_height="44dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="25dp"
+                android:background="@drawable/edittext_white"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:src="@drawable/password" />
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:background="@null"
+                    android:hint="密码6-16个字符组成（字母加数字）"
+                    android:textColor="@color/grayEleven"
+                    android:textSize="@dimen/text_size_three" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="300dp"
+                android:layout_height="44dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="25dp"
+                android:background="@drawable/edittext_white"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:src="@drawable/password" />
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:background="@null"
+                    android:hint="密码6-16个字符组成（字母加数字）"
+                    android:textColor="@color/grayEleven"
+                    android:textSize="@dimen/text_size_three" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="300dp"
+                android:layout_height="44dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="25dp"
+                android:background="@drawable/edittext_white"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:src="@drawable/password" />
+
+                <EditText
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:background="@null"
+                    android:hint="请输入手机验证码"
+                    android:textColor="@color/grayEleven"
+                    android:textSize="@dimen/text_size_three" />
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="20dp"
+                    android:background="@color/grayEleven" />
+
+                <TextView
+                    android:layout_width="90dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="5dp"
+                    android:text="发送验证码"
+                    android:textColor="@color/yellowOne"
+                    android:textSize="@dimen/text_size_three" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="300dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="35dp"
+                android:background="@drawable/edittext_yellow"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:gravity="center_vertical"
+                    android:text="立即注册"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/text_size_three" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="15dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:text="点击立即注册表示你已阅读并同意"
+                    android:textColor="@color/grayEleven"
+                    android:textSize="@dimen/text_size_five" />
+
+                <TextView
+                    android:id="@+id/agreement"
+                    android:layout_width="wrap_content"
+
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:text="《你在哪协议》"
+                    android:textColor="@color/yellowOne"
+                    android:textSize="@dimen/text_size_five" />
+            </LinearLayout>
+        </com.example.administrator.whereareyounow.view.PercentLinearLayout>
+    </com.example.administrator.whereareyounow.view.MyScrollView>
 </com.example.administrator.whereareyounow.view.PercentLinearLayout>
