--- a/app/src/main/res/layout/activity_useragreement.xml
+++ b/app/src/main/res/layout/activity_useragreement.xml
@@ -86,7 +86,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:text="@string/progresstwo"
-                android:textSize="12sp" />
+                android:textSize="12sp"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="15dp"></View>
         </LinearLayout>
     </com.example.administrator.whereareyounow.view.MyScrollView>
 </com.example.administrator.whereareyounow.view.PercentLinearLayout>
