--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -25,15 +25,43 @@
             android:layout_width="75dp"
             android:layout_height="75dp"
             android:layout_marginTop="35dp"
-            android:background="@drawable/myhead" />
+            android:src="@drawable/default_head" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="您还未"
+                android:textColor="@color/Treeblack"
+                android:textSize="15sp" />
 
-            <ImageView
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="登录"
+                android:textSize="15sp"
+                android:textColor="@color/yellowOne"
+                android:id="@+id/mine_login" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:textColor="@color/Treeblack"
+                android:text="或" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="注册"
+                android:textSize="15sp"
+                android:textColor="@color/yellowOne"
+                android:id="@+id/mine_regist" />
+            <!--<ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/girl" />
@@ -44,7 +72,7 @@
                 android:layout_marginLeft="30dp"
                 android:text="27岁"
                 android:textColor="#323232"
-                android:textSize="15sp" />
+                android:textSize="15sp" />-->
         </LinearLayout>
     </LinearLayout>
 
