--- a/app/src/main/res/layout/item_default_list.xml
+++ b/app/src/main/res/layout/item_default_list.xml
@@ -103,7 +103,8 @@
                             android:textColor="#323232" />
 
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
                             android:text="13218105401"
@@ -111,12 +112,13 @@
 
                         <View
                             android:layout_width="1dp"
+                            android:layout_gravity="center"
                             android:layout_height="15dp"
-                            android:layout_marginLeft="15dp"
                             android:background="#d6d7dc"></View>
 
                         <TextView
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
                             android:layout_height="wrap_content"
                             android:layout_marginRight="12dp"
                             android:gravity="right"
