--- a/app/src/main/res/layout/navigation_bar.xml
+++ b/app/src/main/res/layout/navigation_bar.xml
@@ -38,7 +38,7 @@
 
                 <ImageView
                     android:id="@+id/title_left"
-                    android:paddingLeft="12dp"
+                    android:padding="12dp"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:src="@mipmap/back"
