--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -5,20 +5,46 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.administrator.whereareyounow.activity.GuideActivity">
-    <android.support.v4.view.ViewPager
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/pager" />
-    <!-- 底部构建LinearLayout容器,里面放置小圆点 -->
-    <LinearLayout
-        android:id="@+id/bottom_container"
+    <FrameLayout
+        android:id="@+id/frame"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_marginBottom="16dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        >
-        <!-- 内部的小圆点动态代码添加,根据实际的图片源 -->
-    </LinearLayout>
+        android:background="#abcdef" >
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_gravity="bottom"
+            android:gravity="center" >
+
+            <View
+                android:id="@+id/y1"
+                android:layout_width="9dip"
+                android:layout_height="9dip"
+                android:layout_marginLeft="3dip"
+                android:layout_marginRight="3dip"
+                android:background="@drawable/guide_yellow" />
+
+            <View
+                android:id="@+id/y2"
+                android:layout_width="9dip"
+                android:layout_height="9dip"
+                android:layout_marginLeft="3dip"
+                android:layout_marginRight="3dip"
+                android:background="@drawable/guide_white" />
+
+            <View
+                android:id="@+id/y3"
+                android:layout_width="9dip"
+                android:layout_height="9dip"
+                android:layout_marginLeft="3dip"
+                android:layout_marginRight="3dip"
+                android:background="@drawable/guide_white" />
+        </LinearLayout>
+    </FrameLayout>
 </FrameLayout>
