--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -22,13 +22,13 @@
         <TextView
             android:id="@+id/left_msg"
             android:layout_width="wrap_content"
-            android:layout_height="45dp"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:background="@drawable/chat01_bg"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="112s1dd" />
+            android:layout_height="wrap_content"
+            android:background="@drawable/chatfrom_bg"
+            android:gravity="center_vertical"
+            android:textColor="@color/gray"
+            android:text="2222sddsdsdsdsdsdsdsdsdsd"
+            android:textSize="14sp" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -45,9 +45,8 @@
             android:layout_height="45dp"
             android:layout_gravity="center"
             android:layout_margin="10dp"
-            android:background="@drawable/chat02_bg"
+            android:background="@drawable/chatto_bg"
             android:gravity="center"
-            android:padding="10dp"
             android:text="但少点" />
 
         <ImageView
