--- a/app/src/main/res/layout/fragment_home_default.xml
+++ b/app/src/main/res/layout/fragment_home_default.xml
@@ -3,10 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.administrator.whereareyounow.fragment.HomeDefaultFragment">
-    <android.support.v7.widget.RecyclerView
+    <com.lfq.pulltorefresh.library.PullToRefreshRecyclerView
         android:id="@+id/rcv"
         android:focusableInTouchMode="true"
+        android:overScrollMode="never"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent"></com.lfq.pulltorefresh.library.PullToRefreshRecyclerView>
 
 </FrameLayout>
