--- a/app/src/main/res/layout/fragment_home_distance.xml
+++ b/app/src/main/res/layout/fragment_home_distance.xml
@@ -4,10 +4,16 @@
     android:layout_height="match_parent"
     tools:context="com.example.administrator.whereareyounow.fragment.HomeDistanceFragment">
 
-    <android.support.v7.widget.RecyclerView
+    <!--<android.support.v7.widget.RecyclerVie
         android:id="@+id/rcv"
         android:focusableInTouchMode="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent"></android.support.v7.widget.RecyclerVie>-->
+    <com.lfq.pulltorefresh.library.PullToRefreshRecyclerView
+        android:id="@+id/rcv"
+        android:focusableInTouchMode="true"
+        android:overScrollMode="never"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></com.lfq.pulltorefresh.library.PullToRefreshRecyclerView>
 
 </FrameLayout>
